src/tests/functionality/assignment_6_advanced_features/invalid_semantic/07_mandatory_nested_struct_missing_member.c
struct Packet {
    int length;
    int code;
};

struct Header {
    int src;
    struct Packet data;
};

int main() {
    struct Header h;

    h.data.missing = 5;

    return 0;
}